--- a/app/assets/stylesheets/shared/_forms.scss
+++ b/app/assets/stylesheets/shared/_forms.scss
@@ -1,3 +1,22 @@
+#post-form-view {
+  h1 small {
+    font-size: rem(16);
+    font-family: $body-font;
+    span { font-weight: bold; }
+  }
+
+  .form-group > label {
+    color: $dark;
+    font-weight: bold;
+  }
+
+  .required > label {
+    &:after {
+      content: '*';
+      color: $red;
+    }
+  }
+}
 .wysiwyg-editor {
   min-height: rem(300);
   border:1px solid $ccc;
@@ -40,21 +59,60 @@
   flex-wrap: wrap;
 
   .post-type {
+    @include border-radius;
     flex: 0 0 auto;
-    text-align: center;
-    width: 30%;
-    border: 1px solid $light;
-    margin: rem(10);
+    width: 48%;
     padding: rem(10);
-
-    img { width: 50% }
+    margin: rem(5);
+    background: $light;
+    position: relative;
+    cursor: pointer;
 
     input[type='radio'] {
       width: rem(20);
       height: rem(20);
-      margin: auto;
+      margin-top: rem(5);
+      position: absolute;
+      top: 0;
+      right: 0;
+    }
+  }
+
+  .post-type-block {
+    display:flex;
+    cursor: pointer;
+
+    .icon,
+    .description {
+      flex: 0 0 auto;
     }
 
+    .icon {
+      width: rem(120);
+      img { width: 100% }
+    }
+
+    .description {
+      flex: 1 1 auto;
+      margin-left: rem(20);
+      p { margin: 0 rem(20) 0 0; }
+      p span {
+        font-weight: bold;
+      }
+    }
+  }
+}
+
+.department-checkboxes {
+  display: flex;
+
+  .check-block {
+    @include border-radius;
+    width: 30%;
+    margin-right: rem(10);
+    background: $light;
+    padding: rem(10);
+    input.form-control { width: rem(20); display: inline-block;}
   }
 }
 
