--- a/app/views/posts/edit.html.haml
+++ b/app/views/posts/edit.html.haml
@@ -1,4 +1,4 @@
 #post-form-view
-  %h1 Editing Post
-  = render 'form', post: @post
+  %h1 Edit this Post
+  = render 'form', post: @post, permissions: @permissions
 
