--- a/app/views/layouts/poster.html.haml
+++ b/app/views/layouts/poster.html.haml
@@ -37,8 +37,19 @@
     %meta{:content => "#ffffff", :name => "theme-color"}/
 
   %body
+    #announcements
+      -get_announcements.each do |announcement|
+        %a.announcement-item{href: post_path(announcement)}
+          %span.icon
+            %i.fa.fa-exclamation-triangle
+          .content
+            %date=announcement.updated_at.strftime("%A %b %d, %Y")
+            %p=truncate(announcement.summary, length: 140)
     #application-container
-      = yield
+      .app-layout
+        #content-area
+          = yield
+
     =render 'shared/footer'
 
     / jQuery
