bug fix for empty sets

--- a/app/views/shared/_navbar.haml
+++ b/app/views/shared/_navbar.haml
@@ -5,10 +5,6 @@
         =render 'shared/logo', {color: 'brand'}
     .options-container
       %nav
-        %a#tour-announcements.link{:href => "#"}
-          Our Announcements
-          %span.badge.badge-pill.badge-danger=get_announcements.count
-
         #option-set-1
           %a#tour-departments.nav-link.dropdown-toggle{"aria-expanded" => "false", "aria-haspopup" => "true", "data-toggle" => "dropdown", :href => "#", :role => "button", "data-target"=>"option-set-1"}
             IT Departments
@@ -17,7 +13,7 @@
               %a.dropdown-item{ href: department_path(dept) }
                 %span.label=dept.name
                 -unless get_bulletins(dept.id).empty?
-                  %span.badge.badge-pill.badge-info=get_bulletins(dept.id).count
+                  %i.fa.fa-exclamation-circle.orange
 
     .options-container
       %nav
