WIP post show view

--- a/app/assets/stylesheets/shared/_colors.scss
+++ b/app/assets/stylesheets/shared/_colors.scss
@@ -6,22 +6,22 @@ $black:#000;
 $dark:#222;
 $halfblack:rgba(black, 0.5);
 $halfwhite:rgba(white, 0.5);
-$red:#ff0015;
-$orange:#FF4700;
-$yellow:#FFEB3B;
+$red:#ED1C24;
+$orange:#F7931E;
+$yellow:#EFD61D;
 $gold:#F6BB42;
 $highlighter:#EAEF3A;
-$green:#8BC34A;
+$green:#39B54A;
 $brand-blue:#005596;
 $brand:$brand-blue;
 $blue:#2d98f9;
 $indigo:#3F51B5;
-$violet:#673AB7;
+$violet:#662D91;
 $purple:$violet;
 $trans:transparent;
 $navy:#063850;
 $teal:#50E3C2;
-$pink:#F787B5;
+$pink:#ED1E79;
 $silver:#8a8a8a;
 $mint:#48CFAD;
 $aqua:#4FC1E9;
