--- a/app/assets/stylesheets/shared/_tag-search-control.scss
+++ b/app/assets/stylesheets/shared/_tag-search-control.scss
@@ -92,3 +92,21 @@
     button.btn-default { display: none; }
   }
 }
+
+// On Page
+.tag-cluster {
+  .tags-container {
+    display: flex;
+    flex-wrap: wrap;
+    a {
+      @include border-radius;
+      @include shadow;
+      margin: 0 rem(5) rem(5) 0;
+      background: $blue;
+      color: $white;
+      border: none;
+      padding: rem(5) rem(10);
+      text-decoration: none;
+    }
+  }
+}
