--- a/app/views/shared/_footer.haml
+++ b/app/views/shared/_footer.haml
@@ -10,15 +10,15 @@
             %a{href: department_path(dept)}=dept.name
         .block.links
           %label Resources
-          %a{:href => "#"} Leadership
-          %a{:href => "#"} Our Mission
-          %a{:href => "#"} FAQs
-          %a{:href => "#"} Forms
+          %a{:href => "/leadership.html"} Leadership
+          %a{:href => "/mission.html"} Our Mission
+          %a{:href => "/faqs.html"} FAQs
+          %a{:href => "/linkto.html"} Forms
         .block.links
           %label More resources
-          %a{:href => "#"} Blog
-          %a{:href => "#"} Hendrick University
-          %a{:href => "#"} Schedules
+          %a{:href => "/howtos.html"} How-Tos
+          %a{:href => "https://www.hendrickcareers.com/Hendrick-University-.html"} Hendrick University
+
         .block.links.social
           %label Stay updated
           %a{:href => "#"}
