--- a/app/assets/stylesheets/shared/_departmentpage.scss
+++ b/app/assets/stylesheets/shared/_departmentpage.scss
@@ -3,7 +3,8 @@
   padding: rem(40);
 }
 
-#department-post-list {
+#department-post-list,
+#type-posts {
   margin: rem(20);
 
   .post-list-filter-container {
@@ -31,4 +32,24 @@
 
 #department-form-view {
   padding: rem(40);
+}
+
+#type-posts {
+  display: flex;
+
+  .type-post-nav,
+  .type-post-list {
+    flex: 0 0 auto;
+  }
+
+  .type-post-nav {
+    width: 20%;
+    margin-right: rem(20);
+  }
+
+  .type-post-list { width: 80%; }
+
+  .post-list-filter-container {
+    margin: 0 0 rem(20) 0;
+  }
 }
