--- a/app/views/layouts/poster.html.haml
+++ b/app/views/layouts/poster.html.haml
@@ -37,14 +37,7 @@
     %meta{:content => "#ffffff", :name => "theme-color"}/
 
   %body
-    #announcements
-      -get_announcements.each do |announcement|
-        %a.announcement-item{href: post_path(announcement)}
-          %span.icon
-            %i.fa.fa-exclamation-triangle
-          .content
-            %date=announcement.updated_at.strftime("%A %b %d, %Y")
-            %p=truncate(announcement.summary, length: 140)
+    =render 'shared/latest-announcement'
     #application-container
       .app-layout
         #content-area
