--- a/app/views/home/leadership.html.haml
+++ b/app/views/home/leadership.html.haml
@@ -2,7 +2,7 @@
 #department-intro
   %h1 Leadership
   %p.lead When something goes wrong, we take it on the chin.
-#department-heads
+#department-heads.container
   -@managers.each do |manager|
     %article.department-head
       %img{src:manager.photo_url}
