updating various parts of the ui and design

--- a/app/assets/stylesheets/shared/_colors.scss
+++ b/app/assets/stylesheets/shared/_colors.scss
@@ -12,9 +12,11 @@ $yellow:#EFD61D;
 $gold:#F6BB42;
 $highlighter:#EAEF3A;
 $green:#39B54A;
-$brand-blue:#005596;
+// $brand-blue:#005596;
+$brand-blue:#005493;
+
 $brand:$brand-blue;
-$blue:#2d98f9;
+$blue:#37AAF7;
 $indigo:#3F51B5;
 $violet:#662D91;
 $purple:$violet;
@@ -25,7 +27,7 @@ $pink:#ED1E79;
 $silver:#8a8a8a;
 $mint:#48CFAD;
 $aqua:#4FC1E9;
-
+$lightblue: #ecf8ff;
 $colors: (
   "pink": $pink,
   "red": $red,
