--- a/app/views/home/_teammates.haml
+++ b/app/views/home/_teammates.haml
@@ -1,6 +1,7 @@
 #teammates
-  .container
-    .message
-      =render 'counter', number:'9,123'
-      %h1.secondary Hendrick Teammates
-      %p.lead=Faker::Lorem.paragraph(4)
+  .image
+    %img{src:'web-images/teammates-image.jpg'}
+  .message
+    =render 'counter', number:'9,123'
+    %h1.secondary Hendrick Teammates
+    %p.lead Our IT team is dedicated to connecting you with you customers. Our highly trained, IT professionals are here to help you every step of the way. From on-boarding to network access, we're ready to handle any IT related issue you are facing.
