--- a/app/assets/stylesheets/shared/_homepage.scss
+++ b/app/assets/stylesheets/shared/_homepage.scss
@@ -1,40 +1,31 @@
 #welcome-container {
-  background: $light url(/web-images/welcome-image.jpg);
-  background-position: top center;
-  background-size: 100%;
-  min-height: rem(600);
-  border-bottom: 1px solid $light;
+  background: url(/web-images/welcome-image.jpg);
+  background-position: bottom center;
+  min-height: rem(850);
 
   .welcome-message {
-    // position: relative;
-    // top: rem(100);
-    text-align: left;
+    text-align: center;
     padding: rem(40) 0;
-    line-height: rem(50);
-    // background: rgba($white, 0.9);
 
     span {
       font-family: 'Titillium Web';
       font-weight: 300;
       color: $dark;
       font-size: rem(40);
-      display: block;
+
 
       &.highlight {
         font-weight: 700;
-        color: $gold;
+        color: $blue;
         font-size: rem(50);
+        display: block;
       }
     }
   }
 
   .search-container {
-    @include border-radius;
     width: 100%;
-    padding: rem(20);
-    padding-left: 0;
-    background: rgba($white, 0.6);
-
+    padding: 0 0 rem(20) 0;
 
     .app-tag-input,
     .react-autosuggest__container input,
@@ -51,12 +42,10 @@
       margin-left: rem(10);
     }
 
-
-
     .app-tag-input {
       height: rem(65);
       border: none;
-      @include shadow;
+      border-bottom: 3px solid $brand;
 
       .btn.btn-default {
         @include border-radius(0 $radius $radius 0);
@@ -78,27 +67,26 @@
 }
 
 #teammates {
-  background: $white url(/web-images/teammates-image.png) no-repeat;
-  background-position: bottom center;
-  background-size: 85%;
-  padding: rem(150) 0;
-  .container {
-    display: flex;
-    flex-direction: row-reverse;
+  display: flex;
+  margin: rem(100) 0;
+  .image,
+  .message {
+    flex: 0 0 auto;
+    width: 50%;
+    text-align: left;
+    padding: rem(50);
+  }
 
-    .message {
-      flex: 0 0 auto;
-      width: 60%;
-      text-align: left;
-      background: rgba($white, 0.9);
-      padding: rem(50)
+  .image {
+    img {
+      width: 100%;
     }
+  }
 
-    .message {
-      .counter-element {
-        margin-bottom: rem(20);
-        justify-content: left;
-      }
+  .message {
+    .counter-element {
+      margin-bottom: rem(20);
+      justify-content: left;
     }
   }
 }
