--- a/app/assets/stylesheets/shared/_postpages.scss
+++ b/app/assets/stylesheets/shared/_postpages.scss
@@ -60,19 +60,36 @@
   }
 }
 
-#post-detail-view {
+#show-post {
+  width: rem(960);
+  margin: auto;
 
-  .post-detail-body {
-    p,
-    p span {
-      font-size: rem(20) !important;
+  #post-detail-view {
+    .title,
+    .author {
+      text-align: left;
+
+      h1 {
+        font-family: serif;
+        font-size: rem(45);
+        font-weight: normal;
+      }
     }
 
-    img {
-      max-width: rem(400);
-      padding: rem(10);
-      background: $light;
-      border:1px solid $ccc;
+    .post-detail-body {
+      p {
+        font-family: serif;
+        font-weight: normal;
+        font-size: rem(22) !important;
+        line-height: rem(40);
+      }
+
+      img {
+        width: 100% !important;
+        padding: rem(5);
+        background: $white;
+        border:1px solid $ccc;
+      }
     }
   }
 }
