--- a/app/assets/stylesheets/shared/_layout.scss
+++ b/app/assets/stylesheets/shared/_layout.scss
@@ -35,71 +35,165 @@ body {
   margin: rem(20) 0;
 }
 
-#bulletins,
 #announcements {
-  background: $white;
+  position: fixed;
+  bottom: rem(20);
+  right: rem(20);
 
-  .bulletin-item,
-  .announcement-item {
-    display: flex;
-    margin-bottom: rem(10);
-    background: $white;
-    color: $black;
-    text-decoration: none;
-    align-items: stretch;
+  .alert .icon, [role=alert] .icon { background: none; }
 
-    .content,
-    span.icon {
-      margin: 0;
-      flex: 0 0 auto;
-      padding: rem(10);
-    }
-
-    .content {
-      date {
-        color: $ccc;
-      }
-      p {
-        width: auto;
-        margin: 0;
-      }
-    }
-
-    span.icon {
-      background: $orange;
-      color: $white;
-      text-align: center;
-      font-size: rem(20);
+  &:hover {
+    .announcement-message {
+      right: rem(20);
+      opacity: 1;
     }
   }
 
-  .announcement-item { margin-bottom: 0; }
-  .announcement-item span.icon { background: $red; }
+  .announcement-icon-button {
+    position: fixed;
+    bottom: rem(20);
+    right: rem(20);
+    text-align: center;
+    color: $white;
+    line-height: rem(50);
+    background: $red;
+    width: rem(50);
+    height: rem(50);
+    @include shadow;
+    @include border-radius($round);
+    @include pulse;
+  }
 
-  .announcement-item {
-    background:  rgba($red, 0.3);
+  .announcement-message {
+    background: $red;
+    color: $white;
+    width: rem(300);
+    position: fixed;
+    bottom: rem(80);
+    right: rem(-300);
+    opacity: 0;
+    @include border-radius;
+    transition: all 0.3s;
 
-    .content date { color: $halfblack; }
+    .message-wrapper {
+      padding: rem(10);
+
+      date {
+        font-size: rem(14);
+        color: $yellow;
+      }
+    }
+  }
+}
+
+#bulletins {
+  h5 {
+    color: $white;
+    font-weight: normal;
+    background: $orange;
+    display: inline-block;
+    padding: rem(10);
+    margin-bottom: 0;
   }
 
   .bulletin-item {
-    background: rgba($orange, 0.3);
+    position: relative;
+    overflow: hidden;
+    display: block;
+    padding: rem(10);
+    text-decoration: none;
+    border-left: 3px solid $orange;
+    transition: background 0.3s;
 
-    .content date { color: $halfblack; }
-  }
-}
+    &:hover { background: rgba($orange, 0.2); }
 
-#announcements {
-  .alert {
-    padding: 0;
-    border:none;
-    margin: 0;
-
-    button {
-      outline: none;
+    .bulletin-icon {
       position: absolute;
-      top: rem(20);
+      font-size: rem(150);
+      opacity: 0.8;
+      top: rem(-20);
       right: rem(20);
+      color: $halfwhite;
+      transform: rotate(-15deg);
+    }
+
+    .bulletin-content {
+      color: $dark;
+      font-size: rem(18);
+      p { margin-bottom: 0; }
+      date {
+        font-size: rem(14);
+        color: $orange;
+      }
     }
   }
 }
+
+// #bulletins,
+// #announcements {
+//   background: $white;
+
+//   .bulletin-item,
+//   .announcement-item {
+//     display: flex;
+//     margin-bottom: rem(10);
+//     background: $white;
+//     color: $black;
+//     text-decoration: none;
+//     align-items: stretch;
+
+//     .content,
+//     span.icon {
+//       margin: 0;
+//       flex: 0 0 auto;
+//       padding: rem(10);
+//     }
+
+//     .content {
+//       date {
+//         color: $ccc;
+//       }
+//       p {
+//         width: auto;
+//         margin: 0;
+//       }
+//     }
+
+//     span.icon {
+//       background: $orange;
+//       color: $white;
+//       text-align: center;
+//       font-size: rem(20);
+//     }
+//   }
+
+//   .announcement-item { margin-bottom: 0; }
+//   .announcement-item span.icon { background: $red; }
+
+//   .announcement-item {
+//     background:  rgba($red, 0.3);
+
+//     .content date { color: $halfblack; }
+//   }
+
+//   .bulletin-item {
+//     background: rgba($orange, 0.3);
+
+//     .content date { color: $halfblack; }
+//   }
+// }
+
+// #announcements {
+//   .alert {
+//     padding: 0;
+//     border:none;
+//     margin: 0;
+
+//     button {
+//       outline: none;
+//       position: absolute;
+//       top: rem(20);
+//       right: rem(20);
+//     }
+//   }
+// }
