--- a/app/assets/stylesheets/shared/_mixins.scss
+++ b/app/assets/stylesheets/shared/_mixins.scss
@@ -62,3 +62,19 @@ $spaceamounts: (0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10);
   .pl-#{$space} { padding-left: #{$space}rem; }
   .pr-#{$space} { padding-right: #{$space}rem; }
 }
+
+// Animations
+@-webkit-keyframes pulse {
+  from {
+    transform:scale(1);
+  }
+  50% {
+    transform:scale(1.05);
+  }
+  to {
+    transform:scale(1);
+  }
+}
+@mixin pulse {
+  -webkit-animation: pulse 0.5s infinite;
+}
