--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -14,7 +14,8 @@
     %link{:href => "//fonts.googleapis.com/css?family=Titillium+Web:300,700|Muli:300,300i,700,900,900i", :rel => "stylesheet"}
 
     / Font Awesome
-    %script{:defer => "defer", :src => "//use.fontawesome.com/releases/v5.0.6/js/all.js"}
+    %script{:src => "//use.fontawesome.com/releases/v5.0.13/js/all.js", integrity:'sha384-xymdQtn1n3lH2wcu0qhcdaOpQwyoarkgLVxC/wZ5q7h9gHtxICrpcaSUfygqZGOe', crossorigin: 'anonymous'}
+
 
     = stylesheet_link_tag 'application', media: 'all'
 
