updating the posts view

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -18,6 +18,7 @@
 @import "shared/postpages";
 @import "shared/userpages";
 @import "shared/layout";
+@import "shared/announcements";
 
 // Add to HASG
 .btn-success { color: $white; }
